Version 2.1.5
----------------------------------
Core - General
  - Fix fatal error if an extcss stylesheet was placed in the admin theme
  - Another minor fix to clearing cached files.

Design Manager
  - Fix problem with resetting a template back to factory defaults, or creating a new template from factory defaults.

Version 2.1.4 - Freetown
----------------------------------
Core - General
  - Fix to the clear_cached_file() method which should fix problems with module installation.
  - Minor tweak to distributed sample htaccess.txt file.

Phar Installer
  - Fixes issues with respect to hanging on step 7 when suhosin PHP addon was installed.
  - Minor PHP7 Fixes.


Version 2.1.3 - Black Point
----------------------------------
Core - General
  - Security fix to prevent HTTP_HOST attacks. Many thanks to I-TRACING (www.i-tracing.com) for reporting it!!
  - Remove stub .htaccess files from subdirectories
  - Update the included sample htaccess.txt file for security
  - Fix for endless loop when calculating a page alias in utf-8 environments
  - Fix for endless loop when calculating a page alias and a page name/title ended with -
  - Fixes a notice on the login page.
  - Optimize LoadContentFromId() to be typesafe, and use default page, if the id passed in is invalid.
  - Fix error condition if there were no default default design, or default page template.
  - Fix problem with system verification.

  - #10825 - Admin-account settings don't remember startpage if you set one.
  - #10874 - When creating a page and the title has specific characters, CMSMS stops responding.
  - #10910 - content and content_module order incorrect Admin page.
  - #10911 - 'Use Admin Search' permission not being used in 2.1.2.
  - #10921 - Content Field to Display in Name Column not used.

AdminSearch v1.0.1
  - Minor fix to permissions checks.

Navigator v1.0.3
  - Improved exception handling on install .

News v2.50.5
  - Fix error condition if no results were returned.
