@@ -519,7 +519,7 @@ final class CmsApp {
 		global $CMS_LOGIN_PAGE, $CMS_INSTALL_PAGE;
 		if( isset($CMS_LOGIN_PAGE) || isset($CMS_INSTALL_PAGE) ) return;
 		if( !defined('TMP_CACHE_LOCATION') ) return;
-        $age_days = max(0,(int)$age_days);
+        	$age_days = max(0,(int)$age_days);
 		$the_time = time() - $age_days * 24*60*60;
 
 		$dirs = array(TMP_CACHE_LOCATION,PUBLIC_CACHE_LOCATION,TMP_TEMPLATES_C_LOCATION);
