@@ -44,7 +44,7 @@ class ModuleManager extends CMSModule
 
   function GetName() { return get_class($this); }
   function GetFriendlyName() { return $this->Lang('friendlyname'); }
-  function GetVersion() { return '2.0.2'; }
+  function GetVersion() { return '2.0.3'; }
   function GetHelp() { return $this->Lang('help'); }
   function GetAuthor() { return 'calguy1000'; }
   function GetAuthorEmail() { return 'calguy1000@hotmail.com'; }
@@ -55,7 +55,7 @@ class ModuleManager extends CMSModule
   function GetAdminSection() { return 'siteadmin'; }
   function GetAdminDescription() { return $this->Lang('admindescription'); }
   function LazyLoadAdmin() { return TRUE; }
-  function MinimumCMSVersion() { return "1.99-alpha0"; }
+  function MinimumCMSVersion() { return '2.1.4'; }
   function InstallPostMessage() { return $this->Lang('postinstall'); }
   function UninstallPostMessage() { return $this->Lang('postuninstall'); }
   function UninstallPreMessage() { return $this->Lang('really_uninstall'); }
