@@ -3,6 +3,9 @@ Version 2.1.5
 Core - General
   - Fix fatal error if an extcss stylesheet was placed in the admin theme
   - Another minor fix to clearing cached files.
+  - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.
+  - Fixes minor notice in user operations.  
+  - Fixes for namespaced modules.
 
 Design Manager
   - Fix problem with resetting a template back to factory defaults, or creating a new template from factory defaults.
@@ -17,6 +20,8 @@ Phar Installer
   - Fixes issues with respect to hanging on step 7 when suhosin PHP addon was installed.
   - Minor PHP7 Fixes.
 
+Module Manager
+  - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.
 
 Version 2.1.3 - Black Point
 ----------------------------------
